# DartBoardDetector

./: .gitignore  CMakeLists.txt  README.md  dart.vec  darts.cpp  darts_gt.h  face.cpp  face_gt.h  readme.txt  report.odt  task3flowdiagram.uxf
dartcascade/: cascade.xml  stage0.xml  stage1.xml  stage2.xml
faces/: face.cpp
