cmake_minimum_required(VERSION 2.8)
project( DartBoardDetector )
find_package( OpenCV REQUIRED )
find_package( OpenMP REQUIRED )
add_executable( darts.out darts.cpp )
target_link_libraries( darts.out ${OpenCV_LIBS} )
if(OPENMP_FOUND)
message("OPENMP FOUND")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()
add_definitions(-Wall -O3 -march=native -mtune=native)
